# structural_variation_finder

./: CMakeLists.txt  init.xml
Source/: Quast_Block.cpp  Quast_Block.h  Quast_TSV_Reader.cpp  Quast_TSV_Reader.h  SV_restrictions.cpp  SV_restrictions.h  Structural_variant.cpp  Structural_variant.h  VCF_Finder.cpp  VCF_Finder.h  main.cpp
Source/TinyXML2/: tinyxml2.cpp  tinyxml2.h
quast_wyniki/quast_results/results_2019_03_07_11_21_12/: icarus.html  report.html  report.tex  report.tsv  report.txt  transposed_report.tex  transposed_report.tsv  transposed_report.txt
quast_wyniki/quast_results/results_2019_03_07_11_21_12/icarus_viewers/: contig_size_viewer.html
quast_wyniki/quast_results/results_2019_03_07_11_37_32/: icarus.html  report.html  report.tex  report.tsv  report.txt  transposed_report.tex  transposed_report.tsv  transposed_report.txt
quast_wyniki/quast_results/results_2019_03_07_11_37_32/contigs_reports/: .~lock.all_alignments_ma_T0.tsv#  all_alignments_ma_T0.tsv  all_alignments_ma_T1.tsv  all_alignments_ref_ma.tsv  contigs_report_ma_T0.mis_contigs.info  contigs_report_ma_T0.stderr  contigs_report_ma_T0.stdout  contigs_report_ma_T0.unaligned.info  contigs_report_ma_T1.stderr  contigs_report_ma_T1.stdout  contigs_report_ma_T1.unaligned.info  contigs_report_ref_ma.mis_contigs.info  contigs_report_ref_ma.stderr  contigs_report_ref_ma.stdout  contigs_report_ref_ma.unaligned.info  ma_T0.mis_contigs.fa  misassemblies_report.tex  misassemblies_report.tsv  misassemblies_report.txt  ref_ma.mis_contigs.fa  transposed_report_misassemblies.aux  unaligned_report.tex  (+5 more)
(+27 files in other folders)
